<!--
  ~ Copyright (c) 2019. Designed & developed by Quabynah Codelabs(c). For the love of Android development.
  -->

<resources>
    <string name="app_name">shared</string>
    <!-- Sign in / Sign out -->
    <string name="welcome">Welcome!</string>
    <string name="a11y_signed_in_content_description">Signed in as %s.</string>
    <string name="a11y_signed_out_content_description">Tap to sign in.</string>
    <string name="dialog_sign_in_content">Sign in to register courses, view facilitator information and rate sessions (if a student). Actions will be synced from your account across app and site.</string>
    <string name="sign_in">Sign in</string>
    <string name="firebase_auth_no_network_connection">No internet connection</string>
    <string name="firebase_auth_unknown_error">Unknown error</string>
    <string name="dialog_sign_out_content">All saved events, seat reservations and session ratings (if a student) remain synced to your account.</string>
    <string name="sign_out">Sign out</string>
    <string name="manage_google_account">Manage your account</string>
    <string name="manage_google_account_url">https://ugscheduler.web.app/account</string>
    <string name="tos_url">https://ugscheduler.web.app/terms</string>
    <string name="privacy_policy_url">https://ugscheduler.web.app/privacy</string>
    <string name="settings_tos" translation_description="Open link to terms of service.">Terms of service</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_oss_licenses">Open sources licenses</string>
    <string name="settings_theme_title">Choose theme</string>
    <string name="settings_theme_system">System default</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_battery">Set by Battery Saver</string>

    <!--Pages-->
    <string name="title_home">Home</string>
    <string name="title_courses">Courses</string>
    <string name="title_my_courses">My Courses</string>
    <string name="title_course_details">Course Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_facilitator">Profile information</string>
    <string name="title_news">News &amp; Updates</string>
    <string name="title_about">About</string>
    <string name="title_search">Search</string>
    <string name="title_info">Info</string>
    <string name="title_chat">Chats</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_preview">Preview Image</string>
    <string name="title_map">Map</string>
    <string name="no_network_connection">No internet connection.</string>
    <string name="no_network_description">To use CSSC, try:\\n\\n - Turning off airplane mode\\n\\n - Turning on mobile data or Wi-Fi\\n\\n - Checking the signal in your area</string>
    <string name="onboarding_welcome_to_app">Welcome, young developer!</string>
    <string name="title_enrol">Enrolment</string>
    <string name="message_hint">What\'s on your mind?</string>
</resources>
