<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Designed & developed by Quabynah Codelabs(c). For the love of Android development.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="?dialogPreferredPadding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="?dialogPreferredPadding" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:gravity="center_vertical"
        android:lines="1"
        android:minHeight="@dimen/profile_dialog_header_height"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.IOSched.AccountDialog.Username"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="@dimen/profile_dialog_account_image_size"
        android:layout_height="@dimen/profile_dialog_account_image_size"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/welcome"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_default_profile_avatar" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/list_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/message"
        style="?materialAlertDialogBodyTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/dialog_sign_in_content"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        tools:ignore="PrivateResource"
        tools:style="@style/AlertDialog.BodyText" />

    <TextView
        android:id="@+id/sign_in"
        style="@style/Widget.IOSched.AccountDialog.ActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:drawableStart="@drawable/ic_login"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/list_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in" />

    <Button
        android:id="@+id/privacy_policy"
        style="@style/Widget.IOSched.BorderlessButton.NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bullet"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <ImageView
        android:id="@+id/bullet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/terms_of_service"
        app:layout_constraintStart_toEndOf="@id/privacy_policy"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:srcCompat="@drawable/bullet_small" />

    <Button
        android:id="@+id/terms_of_service"
        style="@style/Widget.IOSched.BorderlessButton.NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_tos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bullet"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>